--- a/templates/bithumb/index.html
+++ b/templates/bithumb/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -10,8 +12,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="{% static "js/bootstrap.min.js" %}" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -26,10 +28,11 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#">Scoreboard</a>
+                </li>
+                <!-- if request.user.is_authenticated -->
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Item Shop</a>
@@ -37,7 +40,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Forum</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+                <!-- endif -->
             </ul>
+            <!-- if not request.user.is_authenticated  -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <div class="btn-group">
@@ -87,12 +95,13 @@
                               </div>
                 </li>
             </ul>
+            <!-- endif -->
         </div>
     </nav>
     <div class="container mt-5">
         <div class="row">
             <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
-                <img src="./logo.png">
+                <img src="{% static "img/logo.png" %}" alt="LOGO">
             </div>
         </div>
         <div class="row">
