--- a/templates/bithumb/index.html
+++ b/templates/bithumb/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Bithumb</a>
+        <a class="navbar-brand" >Bithumb</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,24 +28,28 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Scoreboard</a>
+                    <a class="nav-link" href="{% url 'game:scoreboard' %}">Scoreboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
                 </li>
                 <!-- if request.user.is_authenticated -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="{% url 'account:profile' user_id=1 %}">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item Shop</a>
+                    <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Forum</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
                 </li>
                 <!-- endif -->
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about' %}">About Us</a>
+                </li>
             </ul>
             <!-- if not request.user.is_authenticated  -->
+            <!-- TODO: maybe put the invest and profile tags here to clean up the top bar? -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <div class="btn-group">
@@ -57,6 +61,7 @@
                                 <h3>Sign Up</h3>
                             </div>
                             <form action="" style="width: 300px;">
+                                <!-- TODO: make form junk here -->
                                 <div class="form-group">
                                     <input type="text" class="form-control" name="username" id="username" placeholder="username">
                                 </div>
