--- a/templates/bithumb/index.html
+++ b/templates/bithumb/index.html
@@ -49,7 +49,7 @@
                 </li>
             </ul>
             <!-- if not request.user.is_authenticated  -->
-            <!-- TODO: maybe put the invest and profile tags here to clean up the top bar? -->
+            <!-- TODO: maybe put the invest and profile tags here to clean up the top bar? ALSO A LOGOUT-->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <div class="btn-group">
@@ -60,19 +60,17 @@
                             <div class="my-3">
                                 <h3>Sign Up</h3>
                             </div>
-                            <form action="" style="width: 300px;">
-                                <!-- TODO: make form junk here -->
+                            <form method="POST" action="{% url 'account:signup' %}" style="width: 300px;">
+                            {% csrf_token %}
+                            {{ signup_form.non_field_errors }}
+                            {% for field in signup_form %}
+                            <div class="form-group">
+                                {{ field.errors }}
+                                {{ field }}
+                            </div>
+                            {% endfor %}
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
-                                </div>
-                                <div class="form-group">
-                                    <button class="btn btn-dark float-right">Sign Up</button>
+                                    <button type="submit" class="btn btn-dark float-right">Sign Up</button>
                                 </div>
                             </form>
                         </div>
@@ -86,15 +84,17 @@
                                   <div class="my-3">
                                       <h3>Login</h3>
                                   </div>
-                                  <form action="" style="width: 300px;">
+                                  <form method="POST" action="{% url 'account:login' %}" style="width: 300px;">
+                                  {% csrf_token %}
+                                  {{ login_form.non_field_errors }}
+                                  {% for field in login_form %}
+                                  <div class="form-group">
+                                      {{ field.errors }}
+                                      {{ field }}
+                                  </div>
+                                  {% endfor %}
                                       <div class="form-group">
-                                          <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                                      </div>
-                                      <div class="form-group">
-                                          <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                                      </div>
-                                      <div class="form-group">
-                                          <button class="btn btn-dark float-right">Login</button>
+                                          <button type="submit" class="btn btn-dark float-right">Login</button>
                                       </div>
                                   </form>
                               </div>
