Add dependency from user to bank account

--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -67,7 +67,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <p>Username : {{ user.username }}</p>
-                <p>Game Points : 10 pts</p>
+                <p>All-time highscore : {{ user.highscore }}</p>
                 <p>Bitcoin : 10 BTC</p>
                 <p>CAD $ : $10</p>
             </div>
