--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -8,6 +8,7 @@
     <title>Bithumb</title>
 
     {% load static %}
+    {% load dict_get %}
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -35,68 +36,27 @@
                     <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
                 </li>
+                {% if request.user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
                 </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}">About Us</a>
                 </li>
             </ul>
-            <!-- again, TODO -->
+            {% if request.user.is_authenticated %}
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <div class="btn-group">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Signup
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right p-3">
-                            <div class="my-3">
-                                <h3>Sign Up</h3>
-                            </div>
-                            <form action="" style="width: 300px;">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
-                                </div>
-                                <div class="form-group">
-                                    <button class="btn btn-dark float-right">Sign Up</button>
-                                </div>
-                            </form>
-                        </div>
-                      </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account:myprofile' %}">Profile</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Login
-                              </a>
-                              <div class="dropdown-menu dropdown-menu-right p-3">
-                                  <div class="my-3">
-                                      <h3>Login</h3>
-                                  </div>
-                                  <form action="" style="width: 300px;">
-                                      <div class="form-group">
-                                          <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                                      </div>
-                                      <div class="form-group">
-                                          <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                                      </div>
-                                      <div class="form-group">
-                                          <button class="btn btn-dark float-right">Login</button>
-                                      </div>
-                                  </form>
-                              </div>
+                    <a class="nav-link" href="{% url 'account:logout' %}">Log out</a>
                 </li>
             </ul>
+            {% endif %}
         </div>
     </nav>
     <div class="container mt-5">
@@ -107,10 +67,10 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <p>ID : Juno Shin</p>
-                <p>Game Points : 10 pts</p>
-                <p>Bitcoin : 10 BTC</p>
-                <p>CAD $ : $10</p>
+                <p>Username : {{ user.username }}</p>
+                <p>All-time highscore : {{ user.highscore }}</p>
+                <p>Bitcoin : {{ user.bank_account.bitcoins }}</p>
+                <p>CAD $ : {{ user.bank_account.in_game_currency }}</p>
             </div>
         </div>
         <div class="row">
