--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -8,6 +8,7 @@
     <title>Bithumb</title>
 
     {% load static %}
+    {% load dict_get %}
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -68,8 +69,8 @@
             <div class="col-lg-12">
                 <p>Username : {{ user.username }}</p>
                 <p>All-time highscore : {{ user.highscore }}</p>
-                <p>Bitcoin : 10 BTC</p>
-                <p>CAD $ : $10</p>
+                <p>Bitcoin : {{ user.bank_account.bitcoins }}</p>
+                <p>CAD $ : {{ user.bank_account.in_game_currency }}</p>
             </div>
         </div>
         <div class="row">
