--- a/templates/invest/invest.html
+++ b/templates/invest/invest.html
@@ -109,8 +109,8 @@
             <div class="col-lg-12">
                 <div class="card mt-3" style="width: 100%; height: 70vh;">
                     <div class="card-body p-3">
-                        <!-- HTML 5 Canvas Here -->
-                        Bit Coin Graph Here
+                        <!-- TODO: use easy-thumbnails -->
+                        <img src="{% static 'img/weekly_prices.png' %}"
                     </div>
                 </div>
             </div>
