--- a/templates/invest/invest.html
+++ b/templates/invest/invest.html
@@ -8,6 +8,7 @@
     <title>Bithumb</title>
 
     {% load static %}
+    {% load thumbnail %}
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -109,8 +110,9 @@
             <div class="col-lg-12">
                 <div class="card mt-3" style="width: 100%; height: 70vh;">
                     <div class="card-body p-3">
-                        <!-- TODO: use easy-thumbnails -->
-                        <img src="{% static 'img/weekly_prices.png' %}"
+                    {#  % thumbnail category.image 370x280 crop as thumb %  #}
+                    <!--img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="hey"/-->
+                        <img src="{% static 'img/weekly_prices.png' %}">
                     </div>
                 </div>
             </div>
