--- a/templates/invest/invest.html
+++ b/templates/invest/invest.html
@@ -15,160 +15,188 @@
 
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
     <script src="{% static "js/bootstrap.min.js" %}"></script>
-</head>
-<body>
+    </head>
+    <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" >Bithumb</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'index' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'game:scoreboard' %}">Scoreboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
-                </li>
-                <!-- if request.user.is_authenticated -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account:profile' user_id=1 %}">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
-                </li>
-                <!-- endif -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About Us</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <div class="btn-group">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Signup
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right p-3">
-                            <div class="my-3">
-                                <h3>Sign Up</h3>
-                            </div>
-                            <form action="" style="width: 300px;">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
-                                </div>
-                                <div class="form-group">
-                                    <button class="btn btn-dark float-right">Sign Up</button>
-                                </div>
-                            </form>
-                        </div>
-                      </div>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Login
-                              </a>
-                              <div class="dropdown-menu dropdown-menu-right p-3">
-                                  <div class="my-3">
-                                      <h3>Login</h3>
-                                  </div>
-                                  <form action="" style="width: 300px;">
-                                      <div class="form-group">
-                                          <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                                      </div>
-                                      <div class="form-group">
-                                          <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                                      </div>
-                                      <div class="form-group">
-                                          <button class="btn btn-dark float-right">Login</button>
-                                      </div>
-                                  </form>
-                              </div>
-                </li>
-            </ul>
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+        <a class="nav-link" href="{% url 'index' %}">Home</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'game:scoreboard' %}">Scoreboard</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
+        </li>
+        <!-- if request.user.is_authenticated -->
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'account:profile' user_id=1 %}">Profile</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
+        </li>
+        <!-- endif -->
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'about' %}">About Us</a>
+    </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+        <div class="btn-group">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Signup
+        </a>
+        <div class="dropdown-menu dropdown-menu-right p-3">
+        <div class="my-3">
+        <h3>Sign Up</h3>
+    </div>
+    <form action="" style="width: 300px;">
+        <div class="form-group">
+        <input type="text" class="form-control" name="username" id="username" placeholder="username">
         </div>
-    </nav>
-    <div class="container mt-5">
+        <div class="form-group">
+        <input type="password" class="form-control" name="password" id="password" placeholder="password">
+        </div>
+        <div class="form-group">
+        <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
+        </div>
+        <div class="form-group">
+        <button class="btn btn-dark float-right">Sign Up</button>
+    </div>
+    </form>
+    </div>
+    </div>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Login
+        </a>
+        <div class="dropdown-menu dropdown-menu-right p-3">
+        <div class="my-3">
+        <h3>Login</h3>
+        </div>
+        <form action="" style="width: 300px;">
+        <div class="form-group">
+        <input type="text" class="form-control" name="username" id="username" placeholder="username">
+        </div>
+        <div class="form-group">
+        <input type="password" class="form-control" name="password" id="password" placeholder="password">
+        </div>
+        <div class="form-group">
+        <button class="btn btn-dark float-right">Login</button>
+        </div>
+        </form>
+        </div>
+        </li>
+        </ul>
+        </div>
+        </nav>
+        <div class="container mt-5">
         <div class="row">
-            <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
-                <img src="{% static 'img/logo.png' %}">
-            </div>
+        <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
+        <img src="{% static 'img/logo.png' %}" style="width: 100%">
+        </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
-                <div class="card mt-3" style="width: 100%; height: 70vh;">
-                    <div class="card-body p-3">
-                    {#  % thumbnail category.image 370x280 crop as thumb %  #}
-                    <!--img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="hey"/-->
-                        <img src="{% static 'img/weekly_prices.png' %}">
-                    </div>
-                </div>
-            </div>
+        <div class="col-lg-12">
+        <div class="card mt-3" style="width: 100%; height: auto;">
+        <div class="card-body p-3">
+        {#  % thumbnail category.image 370x280 crop as thumb %  #}
+    <!--img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="hey"/-->
+        <img src="{% static 'img/weekly_prices.png' %}" style="width: 100%">
+        </div>
+        </div>
+        </div>
         </div>
         <form action="">
-            <div class="row mt-4">
-                <div class="col-lg-6">
-                    <div class="input-group">
-                        <input type="text" name="price" id="price" class="form-control" placeholder="Bitcoin Price">
-                        <div class="input-group-append">
-                            <span class="input-group-text" id="inputGroupPrepend">CAD</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="input-group">
-                        <input type="text" name="price" id="price" class="form-control" placeholder="User's Balance">
-                        <div class="input-group-append">
-                            <span class="input-group-text" id="inputGroupPrepend">Scores</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="input-group my-3">
-                        <input type="text" name="price" id="price" class="form-control" placeholder="Amount scores to spend">
-                        <div class="input-group-append">
-                            <span class="input-group-text" id="inputGroupPrepend">PTS</span>
-                        </div>
-                    </div>
-
-                    <div class="input-group my-3">
-                            <input type="text" name="price" id="price" class="form-control" placeholder="Amount of CAD to spend">
-                            <div class="input-group-append">
-                                <span class="input-group-text" id="inputGroupPrepend">CAD</span>
-                            </div>
-                        </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-right">
-                    <button class="btn btn-light">Proceed</button>
-                </div>
-            </div>
-        </form>
-    </div>
-    <!-- Footer -->
-    <div class="footer mt-4 py-4" style="background:#232323; height: 300px; color: #fff;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h3>Random shit juno wants</h3>
-                </div>
-            </div>
+        <div class="row mt-4">
+        <div class="col-lg-6">
+        <div class="input-group">
+        <input type="text" name="price" id="price" class="form-control" placeholder="Bitcoin Price" disabled value="3000">
+        <div class="input-group-append">
+        <span class="input-group-text" id="inputGroupPrepend">CAD</span>
         </div>
+        </div>
+        </div>
+        <div class="col-lg-6">
+        <div class="input-group">
+        <input type="text" name="price" id="price" class="form-control" placeholder="User's Balance" disabled value="3000">
+        <div class="input-group-append">
+        <span class="input-group-text" id="inputGroupPrepend">Scores</span>
+        </div>
+        </div>
+        </div>
+        </div>
+        <div class="row">
+        <div class="col-lg-6">
+        <div class="input-group my-3">
+        <div class="input-group-prepend">
+        <div class="input-group-text">
+        <input type="radio" name="pay" onchange="changePay(this)" data-type="scores" aria-label="Radio button for following text input">
+        </div>
+        </div>
+        <input type="text" name="price" id="scores" class="form-control" disabled placeholder="Amount scores to spend">
+        <div class="input-group-append">
+        <span class="input-group-text" id="inputGroupPrepend">PTS</span>
+        </div>
+        </div>
+        </div>
+        <div class="col-lg-6">
+        <div class="input-group my-3">
+        <div class="input-group-prepend">
+        <div class="input-group-text">
+        <input type="radio" name="pay" onchange="changePay(this)" data-type="cad" aria-label="Radio button for following text input">
+        </div>
+        </div>
+        <input type="text" name="price" id="cad" class="form-control" disabled placeholder="Amount of CAD to spend">
+        <div class="input-group-append">
+        <span class="input-group-text" id="inputGroupPrepend">CAD</span>
+        </div>
+        </div>
+        </div>
+        </div>
+        <div class="row">
+        <div class="col-lg-12 text-right">
+        <button class="btn btn-light">Proceed</button>
+        </div>
+        </div>
+        </form>
+        </div>
+        <!-- Footer -->
+        <div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
+        <div class="container">
+        <div class="row">
+        <h3>University of Regina</h3>
     </div>
-</body>
+    <div class="row">
+        <h5>Computer Science Dept.</h5>
+    </div>
+    <div class="row">
+        <h7> CS476 Group Proj. by C. Myers & J. Shin</h7>
+    </div>
+    </div>
+    </div>
+    </body>
+    <script>
+    function changePay(e) {
+        var type = $(e).data('type');
+
+        if(type == 'scores') {
+            $('#scores').attr('disabled', false);
+            $('#cad').attr('disabled', true);
+        }else if(type == 'cad') {
+            $('#cad').attr('disabled', false);
+            $('#scores').attr('disabled', true);
+        }
+    }
+    </script>
 </html>
