--- a/templates/invest/itemshop.html
+++ b/templates/invest/itemshop.html
@@ -6,131 +6,178 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bithumb</title>
-
-    {% load static %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Bithumb</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" >Bithumb</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'index' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'game:scoreboard' %}">Scoreboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
-                </li>
-                <!-- if request.user.is_authenticated -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account:profile' user_id=1 %}">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
-                </li>
-                <!-- endif -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About Us</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <div class="btn-group">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Signup
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right p-3">
-                            <div class="my-3">
-                                <h3>Sign Up</h3>
-                            </div>
-                            <form action="" style="width: 300px;">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                                </div>
-                                <div class="form-group">
-                                    <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
-                                </div>
-                                <div class="form-group">
-                                    <button class="btn btn-dark float-right">Sign Up</button>
-                                </div>
-                            </form>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'index' %}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'game:scoreboard' %}">Scoreboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'forum:all_forums' %}">Forum</a>
+            </li>
+            <!-- if request.user.is_authenticated -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'account:profile' user_id=1 %}">Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'invest:itemshop' %}">Item Shop</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'invest:invest' %}">Invest</a>
+            </li>
+            <!-- endif -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}">About Us</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <div class="btn-group">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Signup
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right p-3">
+                        <div class="my-3">
+                            <h3>Sign Up</h3>
                         </div>
-                      </div>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Login
-                              </a>
-                              <div class="dropdown-menu dropdown-menu-right p-3">
-                                  <div class="my-3">
-                                      <h3>Login</h3>
-                                  </div>
-                                  <form action="" style="width: 300px;">
-                                      <div class="form-group">
-                                          <input type="text" class="form-control" name="username" id="username" placeholder="username">
-                                      </div>
-                                      <div class="form-group">
-                                          <input type="password" class="form-control" name="password" id="password" placeholder="password">
-                                      </div>
-                                      <div class="form-group">
-                                          <button class="btn btn-dark float-right">Login</button>
-                                      </div>
-                                  </form>
-                              </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container mt-5">
-        <h3>List of item</h3>
-
-        <table class="table">
-            <thead>
-                <tr>
-                    <td>No</td>
-                    <td>Cost(Pts)</td>
-                    <td>Title</td>
-                    <td>Img</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Kentang</td>
-                    <td>10000</td>
-                    <td><img src="" alt=""></td>
-                </tr>
-            </tbody>
-        </table>
+                        <form action="" style="width: 300px;">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="password" id="password" placeholder="password">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" name="confirm_password" id="confirm_password" placeholder="verify password">
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-dark float-right">Sign Up</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Login
+                </a>
+                <div class="dropdown-menu dropdown-menu-right p-3">
+                    <div class="my-3">
+                        <h3>Login</h3>
+                    </div>
+                    <form action="" style="width: 300px;">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="username" id="username" placeholder="username">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" name="password" id="password" placeholder="password">
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-dark float-right">Login</button>
+                        </div>
+                    </form>
+                </div>
+            </li>
+        </ul>
     </div>
-    <!-- Footer -->
-    <div class="footer mt-4 py-4" style="background:#232323; height: 300px; color: #fff;">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <h3>Random shit juno wants</h3>
+</nav>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-12 d-flex justify-content-center align-items-center mb-3">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <h3>Item Shop</h3>
+            <div class="card mt-3" style="width: 100%; height: 30vh; overflow-x: scroll">
+                <div class="card-body p-3 row">
+                    <div class="col-lg-3">
+                        <div class="card" style="width: 100%; height: 100%;">
+                            <div class="card-body p-3">
+                                <div class="buy-check float-right">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                    </div>
+                                </div>
+                                <!-- HTML 5 Canvas Here -->
+                                Juno Shin
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card" style="width: 100%; height: 100%;">
+                            <div class="card-body p-3">
+                                <div class="buy-check float-right">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                    </div>
+                                </div>
+                                <!-- HTML 5 Canvas Here -->
+                                Juno Shin
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card" style="width: 100%; height: 100%;">
+                            <div class="card-body p-3">
+                                <div class="buy-check float-right">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                    </div>
+                                </div>
+                                <!-- HTML 5 Canvas Here -->
+                                Juno Shin
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="card" style="width: 100%; height: 100%;">
+                            <div class="card-body p-3">
+                                <div class="buy-check float-right">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="gridCheck1">
+                                    </div>
+                                </div>
+                                <!-- HTML 5 Canvas Here -->
+                                Juno Shin
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <button class="btn btn-dark float-right mt-3">Buy</button>
         </div>
     </div>
+
+</div>
+<!-- Footer -->
+<div class="footer mt-4 py-4" style="background:#dae0e5; height: 200px; color: #000000;">
+    <div class="container">
+        <div class="row">
+            <h3>University of Regina</h3>
+        </div>
+        <div class="row">
+            <h5>Computer Science Dept.</h5>
+        </div>
+        <div class="row">
+            <h7> CS476 Group Proj. by C. Myers & J. Shin</h7>
+        </div>
+    </div>
+</div>
 </body>
 </html>
